version deleted from mobile version due to padding issue on smaller devices

--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ body{
 	 	padding-left: 50px;
 	}
 
+	#id_version{
+		display: none;
+	}
+
 	.cl_visible{
 		visibility: visible;
 	}
